# PFORGE3

./: .gitignore  Filemap.md  README.md  fixed_test_live_e2e_full_loop.py  fixed_test_observer_agent.py  fixed_test_planner_agent.py  fixed_test_retry_loop.py  mypy.ini  pforge.toml  pyproject.toml
agents/: PLAN.md
cli/: PLAN.md
config/: PLAN.md
data/: PLAN.md
demo_buggy/: main.py
docs/: PLAN.md
llm_clients/: PLAN.md
messaging/: PLAN.md
metrics/: PLAN.md
orchestrator/: PLAN.md
pforge/: .dockerignore  .gitignore  config.py  package.json  project.py  requirements.txt
pforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pforge/agentic/: loop.py
pforge/agents/: PLAN.md  __init__.py  backtracker_agent.py  base_agent.py  false_piece_agent.py  fixer_agent.py  misfit_agent.py  observer_agent.py  planner_agent.py  predictor_agent.py  spec_oracle_agent.py  summarizer_agent.py
pforge/cli/: __init__.py  chat.py  main.py  prompts.py
pforge/config/: PLAN.md  __init__.py  agents.yaml  allowlists.yaml  llm_providers.yaml  models.py  policies.yaml  quotas.yaml  seccomp.json  settings.yaml
pforge/data/: PLAN.md
pforge/docs/: PLAN.md
pforge/llm_clients/: PLAN.md  __init__.py  budget_meter.py  claude_client.py  gemini_client.py  openai_o3_client.py  (+1 more)
planner/: PLAN.md
policies/: PLAN.md
proof/: PLAN.md
recovery/: PLAN.md
sandbox/: PLAN.md
server/: PLAN.md
storage/: PLAN.md
tests/: PLAN.md  buggy_module.py  test_cli.py
tools/: PLAN.md
ui/: PLAN.md
validation/: PLAN.md
var/: PLAN.md
verifiers/: PLAN.md
(+112 files in other folders)
